--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "caniuse-lite": "^1.0.30001662",
     "chart.js": "^3.4.1",
     "classnames": "^2.3.1",
+    "date-fns": "^4.1.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "easymde": "^2.15.0",
