--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "jsvectormap": "^1.3.2",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.446.0",
     "nouislider-react": "^3.4.0",
     "react": "^18.2.0",
     "react-albus": "^2.0.0",
@@ -44,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "^11.3.4",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.10.1",
     "react-i18next": "^11.11.1",
     "react-image-lightbox": "^5.1.4",
