--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^2.6.0",
+    "@react-google-maps/api": "^2.19.3",
+    "@restart/ui": "^1.8.0",
     "animate.css": "^4.1.1",
     "apexcharts": "^3.27.2",
     "axios": "^0.21.1",
@@ -28,6 +30,8 @@
     "html-to-draftjs": "^1.5.0",
     "i18next": "^20.3.2",
     "i18next-browser-languagedetector": "^6.1.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "jsvectormap": "^1.3.2",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.446.0",
@@ -36,7 +40,7 @@
     "react-albus": "^2.0.0",
     "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.1.1",
-    "react-bootstrap": "2.0.0-rc.0",
+    "react-bootstrap": "^2.10.5",
     "react-bootstrap-typeahead": "^5.2.0",
     "react-chartjs-2": "^3.0.4",
     "react-countdown": "^2.3.2",
