--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^2.6.0",
+    "@react-email/components": "^0.0.25",
     "@react-google-maps/api": "^2.19.3",
     "@restart/ui": "^1.8.0",
     "animate.css": "^4.1.1",
@@ -35,6 +36,7 @@
     "jsvectormap": "^1.3.2",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.446.0",
+    "node-mailjet": "^6.0.6",
     "nouislider-react": "^3.4.0",
     "react": "^18.2.0",
     "react-albus": "^2.0.0",
@@ -107,6 +109,7 @@
     "@types/html-to-draftjs": "^1.4.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "17.0.0",
     "@types/react-albus": "^2.0.6",
     "@types/react-beautiful-dnd": "^13.1.3",
@@ -121,7 +124,8 @@
     "@types/redux-saga": "^0.10.5",
     "@types/sortablejs": "^1.10.7",
     "postcss-custom-properties": "^12.1.4",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "stream-browserify": "^3.0.0"
   },
   "resolutions": {
     "postcss-custom-properties": "^12.1.4",
