--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sortablejs": "^1.14.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.9"
   },
   "scripts": {
