--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL = https://keja-app-backend.vercel.app
+REACT_APP_API_URL = https://kejpllus.vercel.app
 USEREMAIL = mid9it1@gmail.com
 PASS = hyyguzohpoyuupcg
